# CoR-lab

./: .gitignore  CMakeLists.txt  CV_test_instances.txt  CV_train_instances.txt  README.md  clean_all_packages.sh  manifest.xml
include/rug_kfold_cross_validation/: rug_kfold_cross_validation_functionality.h
launch/: kfold_cross_validation_deep_learning_descriptor.launch  kfold_cross_validation_hand_crafted_descriptor.launch
result/: results_of_mobilenetV2_IBL_experiments.txt  results_of_your_name_plus_your_student_number_experiments.txt
result/experiment_1_esf_chi/: summary_of_experiment.txt
result/experiment_1_esf_jeffreys/: summary_of_experiment.txt
result/experiment_1_esf_kl/: summary_of_experiment.txt
result/experiment_1_good_chi_10bins/: summary_of_experiment.txt
result/experiment_1_good_chi_15bins/: summary_of_experiment.txt
result/experiment_1_good_chi_5bins/: summary_of_experiment.txt
result/experiment_1_vfh_chi/: summary_of_experiment.txt
rug_kfold_cross_validation/: CV_test_instances.txt  CV_train_instances.txt
rug_kfold_cross_validation/include/rug_kfold_cross_validation/: kfold_cross_validation_evaluation_functionality.h~  rug_kfold_cross_validation_functionality.h
rug_kfold_cross_validation/launch/: bringup_deep_learning_descriptor.launch  bringup_hand_crafted_descriptor.launch  kfold_cross_validation_deep_learning_descriptor.launch  kfold_cross_validation_hand_crafted_descriptor.launch
rug_kfold_cross_validation/result/: results_of_Andrei and Kamal s4161947 and s3675319_experiments.txt  results_of_TEST_experiments.txt  results_of_your_name_plus_your_student_number_experiments.txt
rug_kfold_cross_validation/result/experiment_1/: summary_of_experiment.txt  summary_of_experiment_esf_chi-sq.txt  summary_of_experiment_esf_fidelity.txt  summary_of_experiment_good_euclidean_15bins.txt  summary_of_experiment_vgg16_downsamplingFALSE__sq-chord_150bins.txt  summary_of_experiment_vgg16_downsamplingTRUE_voxel_size0.000200_sq-chord_150bins.txt
rug_kfold_cross_validation/src/: k_fold_cross_validation.cpp  k_fold_cross_validation_deep_learning_descriptor.cpp  rug_kfold_cross_validation_functionality.cpp
rug_simulated_user/: CMakeLists.txt  manifest.xml
rug_simulated_user/include/rug_simulated_user/: rug_simulated_user_functionality.h
rug_simulated_user/launch/: bringup_deep_learning.launch  simulated_user_deep_learning_descriptor.launch  simulated_user_hand_crafted_descriptor.launch
rug_simulated_user/result/: results_of_IBL_chi_experiments.txt  results_of_TEST_experiments.txt  results_of_cognitive_robotic_course_experiments.txt  sum_all_results_of_IBL_chi_experiments.txt  sum_all_results_of_TEST_experiments.txt  sum_all_results_of_cognitive_robotic_course_experiments.txt
rug_simulated_user/result/experiment_1/: PrecisionMonitor.txt  f1_vs_learned_category.txt  global_F1_vs_learned_category.m  graph1.m  local_f1_vs_learned_category.txt  number_of_learned_categories_vs_Iterations.m  number_of_stored_instaces_per_category.m  summary_of_experiment.txt
rug_simulated_user/result/experiment_1_fidelity/: global_F1_vs_learned_category.m  graph1.m  local_F1_vs_learned_category.m  number_of_learned_categories_vs_Iterations.m  number_of_stored_instaces_per_category.m  summary_of_experiment.txt
rug_simulated_user/src/: rug_simulated_user_deep_learning.cpp  rug_simulated_user_functionality.cpp  rug_simulated_user_hand_crafted_descriptor.cpp
rug_simulated_user/src/draft/: publish_offline_object_using_dataset.cpp  race_simulated_user.cpp  race_simulated_user.cpp.old  race_simulated_user1.cpp  race_simulated_user_BoW.cpp  race_simulated_user_GOOD_NB.cpp  race_simulated_user_JIRS_RAS.cpp  race_simulated_user_LDA.cpp  race_simulated_user_LDA_all_nodes.cpp  race_simulated_user_context_change.cpp  race_simulated_user_context_change_BoW.cpp  race_simulated_user_context_change_GOOD.cpp  race_simulated_user_context_change_JIRS.cpp  race_simulated_user_context_change_LDA.cpp  race_simulated_user_context_change_NB_BoW.cpp  race_simulated_user_context_change_NB_GOOD.cpp  race_simulated_user_context_change_RAS.cpp  race_simulated_user_context_change_local_LDA.cpp  race_simulated_user_general_specific_representation.cpp  race_simulated_user_general_specific_representation_tmp.cpp  race_simulated_user_local_LDA_all_nodes.cpp  race_simulated_user_using_VFH.cpp  race_simulated_user_using_naive_bayes.cpp  test_db_grasp.cpp
rug_simulated_user/video/: F1Monitor.txt  PrecisionMonitor.txt  RecallMonitor.txt
src/: k_fold_cross_validation.cpp  k_fold_cross_validation_deep_learning_descriptor.cpp  rug_kfold_cross_validation_functionality.cpp
